--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "publish:pages": "yarn build && yarn gh-pages -d build -t"
+    "publish:pages": "yarn build && yarn gh-pages -d build -t -m 'docs: update'"
   },
   "husky": {
     "hooks": {
